--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,9 @@
     "mongoose": "^7.4.3",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2"
+  },
+  "engines": {
+    "node": ">=14 <15"
   }
+  
 }
-
